<resources>
    <string name="app_name">Emotional Intelligence Quiz</string>
    <string name="always_applies">Always Applies</string>
    <string name="usually_applies">Usually Applies</string>
    <string name="somewhat_applies">Somewhat Applies</string>
    <string name="rarely_applies">Rarely Applies</string>
    <string name="never_applies">Never Applies</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="overall_score">Overall Score:</string>
    <string name="score_string">%d / 100</string>
    <string name="self_awareness">Self Awareness</string>
    <string name="managing_emotions">Managing Emotions</string>
    <string name="motivating_oneself">Motivating Oneself</string>
    <string name="empathy">Empathy</string>
    <string name="social_skill">Social Skill</string>
</resources>