<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultsActivity">

    <TextView
        android:id="@+id/overall_score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overall_score"
        android:layout_marginTop="25dp"
        android:textSize="25sp"
        android:textColor="@color/text"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/overall_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:textColor="@color/blue_first"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/overall_score_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/self_awareness_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/self_awareness"
        android:textSize="25sp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/text"
        app:layout_constraintTop_toBottomOf="@id/overall_score"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/self_awareness_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textSize="25sp"
        android:textColor="@color/blue_first"
        app:layout_constraintLeft_toRightOf="@id/self_awareness_text"
        app:layout_constraintTop_toTopOf="@id/self_awareness_text"
        android:layout_marginStart="5dp" />

    <TextView
        android:id="@+id/managing_emotions_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/managing_emotions"
        android:textSize="25sp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/text"
        app:layout_constraintTop_toBottomOf="@id/self_awareness_text"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/managing_emotions_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textSize="25sp"
        android:textColor="@color/blue_first"
        app:layout_constraintLeft_toRightOf="@id/managing_emotions_text"
        app:layout_constraintTop_toTopOf="@id/managing_emotions_text"
        android:layout_marginStart="5dp" />

    <TextView
        android:id="@+id/motivating_oneself_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/motivating_oneself"
        android:textSize="25sp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/text"
        app:layout_constraintTop_toBottomOf="@id/managing_emotions_text"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/motivating_oneself_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textSize="25sp"
        android:textColor="@color/blue_first"
        app:layout_constraintLeft_toRightOf="@id/motivating_oneself_text"
        app:layout_constraintTop_toTopOf="@id/motivating_oneself_text"
        android:layout_marginStart="5dp" />

    <TextView
        android:id="@+id/empathy_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/empathy"
        android:textSize="25sp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/text"
        app:layout_constraintTop_toBottomOf="@id/motivating_oneself_text"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/empathy_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textSize="25sp"
        android:textColor="@color/blue_first"
        app:layout_constraintLeft_toRightOf="@id/empathy_text"
        app:layout_constraintTop_toTopOf="@id/empathy_text"
        android:layout_marginStart="5dp" />

    <TextView
        android:id="@+id/social_skill_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/social_skill"
        android:textSize="25sp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/text"
        app:layout_constraintTop_toBottomOf="@id/empathy_text"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/social_skill_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textSize="25sp"
        android:textColor="@color/blue_first"
        app:layout_constraintLeft_toRightOf="@id/social_skill_text"
        app:layout_constraintTop_toTopOf="@id/social_skill_text"
        android:layout_marginStart="5dp" />
</androidx.constraintlayout.widget.ConstraintLayout>